--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-    .nav-item .nav-link{
+   .tech_shop_page_txt{
+        color:#FF0000;
+        font-size: 20px;
+        text-align:center;
+   }
+   
+   
+   .nav-item .nav-link{
         color:#fff;
     }
 
