--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
         color:#FF0000;
         font-size: 20px;
         text-align:center;
+        margin-bottom: 20px
    }
    
    .nav-item .nav-link{
